compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__hover__hover_module_constant_annotation.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\n/// Exciting documentation\n/// Maybe even multiple lines\nconst one: Int = 1\n"
---
/// Exciting documentation
/// Maybe even multiple lines
const one: Int = 1
           ▔▔↑    


----- Hover content -----
Scalar(
    String(
        "```rakun\nInt\n```\n",
    ),
)
