compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__hover__hover_over_block_in_list_spread.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\npub fn main() {\n  [1, 2, ..{\n    let x = 1\n    [x]\n  }]\n}\n"
---
pub fn main() {
  [1, 2, ..{
    let x = 1
        ↑    
    [x]
  }]
}


----- Hover content -----
Scalar(
    String(
        "```rakun\nInt\n```\n",
    ),
)
