compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__hover__hover_prelude_type.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\nconst number = 100\n"
---
const number = 100
▔▔▔▔▔▔▔▔▔↑▔▔      


----- Hover content -----
Scalar(
    String(
        "```rakun\nInt\n```\n",
    ),
)
