compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__hover__hover_print_alias_when_parameters_match.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\ntype MyResult<a, b> = Result<a, b>\n\nfn do_thing() -> MyResult<Int, Int> {\n  Error(1)\n}\n"
---
type MyResult<a, b> = Result<a, b>

fn do_thing() -> MyResult<Int, Int> {
▔▔▔↑▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔  
  Error(1)
}


----- Hover content -----
Scalar(
    String(
        "```rakun\nfn() -> MyResult(Int, Int)\n```\n",
    ),
)
