compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__hover__hover_print_imported_alias.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\nimport aliases.{type Aliased}\nconst thing: Aliased = 10\n"
---
import aliases.{type Aliased}
const thing: Aliased = 10
▔▔▔▔▔▔▔▔▔▔↑▔▔▔▔▔▔▔▔▔     


----- Hover content -----
Scalar(
    String(
        "```rakun\nAliased\n```\n",
    ),
)
