compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__hover__hover_print_qualified_prelude_type_when_shadowed_by_imported_alias.snap
---
source: compiler-core/src/language_server/tests/hover.rs
assertion_line: 1257
expression: "\nimport alias.{type Bool}\nconst value = True\n"
---
import alias.{type Bool}
const value = True
▔▔▔▔▔▔↑▔▔▔▔       


----- Hover content -----
Scalar(
    String(
        "```rakun\nrakun.Bool\n```\n",
    ),
)
